# UntitledGameEngine

./: .gitignore  BuildGame.bat  CMakeLists.txt  EditorConfig  GameEngine.sln  GenerateProjectFiles.bat  README.md  STUFFTOWORKON.txt
Assets/entities/: Boat.ntt  Waw.ntt  Wee.ntt
Assets/hotspot_textures/: AlyxConcrete.hs  AlyxMetal.hs  AlyxPlaster.hs  AlyxWood.hs  AlyxWoodBeam.hs  BrickHotspot.hs  ConcTest.hs  ConcreteHotspot.hs  ConcreteHotspots2.hs  Faa.hs  GreenMetalHotspot.hs  Lol.hs  Wew.hs  WhiteConcreteAlyx.hs  WoodTest.hs
Assets/levels/: 2BallsPlat.lvl  Arr.lvl  BallField.lvl  BallRamp.lvl  BigConcrete.lvl  BigPlatformy.lvl  BigSlope.lvl  Blocks.lvl  Blockus.lvl  Boat.lvl  Brach.lvl  Brachistrochrome.lvl  BrushTest.lvl  BullTest.lvl  CamTest.lvl  CarCourse.lvl  Climb.lvl  ClimbCubby.lvl  ClimbCubbyMult.lvl  ClimbCubbyNoBalls.lvl  ClimbCubbyTest.lvl  ClimbNoLight.lvl  Climba.lvl  Climbb.lvl  Climbc.lvl  Climbd.lvl  Climbe.lvl  Climber.lvl  Climbf.lvl  Climbg.lvl  Climbh.lvl  Climbi.lvl  Climbj.lvl  Climbk.lvl  Climbl.lvl  Climbloop.lvl  Climbm.lvl  Climbn.lvl  Climbo.lvl  Climbp.lvl  (+75 more)
Assets/models/: AK47.mtl  Boo.mtl  Buckyball.blend1  (+18 more)
ClientServer/: ClientServer.vcxproj  ClientServer.vcxproj.filters  main.cpp
Documentation/: To-Do List.md
Editor/: Editor.vcxproj  Editor.vcxproj.filters  EditorScene.cpp  EditorScene.h  EditorState.cpp  EditorState.h  main.cpp
EngineTest/: CollisionGeometry.cpp  CollisionGeometry.h  EngineTest.vcxproj  EngineTest.vcxproj.filters  main.cpp
GameEngine/: Camera.cpp  Camera.h  Collisions.cpp  Collisions.h  Collisions.hpp  ControlInputs.h  ControlInputs.hpp  EnginePlatform.hpp  FileLoader.cpp  FileLoader.h  GUID.cpp  GUID.hpp  GameEngine.h  GameEngine.hpp  GameEngine.vcxproj  GameEngine.vcxproj.filters  Math.cpp  Math.hpp  MeshGenerator.cpp  MeshGenerator.h  MeshGenerator.hpp  ModelLoader.cpp  ModelLoader.h  RendererPlatform.hpp  Scene.cpp  Scene.h  State.hpp  StringUtils.cpp  StringUtils.h  StringUtils.hpp  cpp.hint  win32Engine.cpp  win32OpenGLRenderer.cpp
Legend/: Legend.vcxproj
Libraries/UntitledEngine/: CMakeLists.txt
Libraries/UntitledEngine/Libraries/lib/: glew32s.lib  glew32sd.lib
Libraries/UntitledEngine/Source/: Camera.cpp  Camera.h  FileLoader.cpp  GUID.cpp  GUID.hpp  GameEngine.h  Scene.cpp  Scene.h  StringUtils.h
Libraries/UntitledEngine/Source/Asset/: AssetRegistry.cpp  AssetRegistry.h
Libraries/UntitledEngine/Source/Behaviour/: Behaviour.cpp  Behaviour.h
Libraries/UntitledEngine/Source/Components/: Component.cpp  Component.h  ModelComponent.h
Libraries/UntitledEngine/Source/Entities/: Entity.cpp  Entity.h
Libraries/UntitledEngine/Source/Graphics/: DirectionalLight.cpp  DirectionalLight.h  HotspotTexture.cpp  HotspotTexture.h  Material.cpp  Material.h  Model.cpp  Model.h  PointLight.cpp  PointLight.h  RenderableInterface.h  SpotLight.cpp  SpotLight.h
Libraries/UntitledEngine/Source/HalfEdge/: HalfEdge.cpp  HalfEdge.h
Libraries/UntitledEngine/Source/Interfaces/: EditorClickable_i.h
Libraries/UntitledEngine/Source/Math/: Geometry.h  Math.cpp  Math.h  Quaternion.cpp  Quaternion.h  Transform.cpp  Transform.h  Vector.cpp  Vector.h
Libraries/UntitledEngine/Source/Modules/: AudioModule.cpp  AudioModule.h  CollisionModule.cpp  CollisionModule.h  GraphicsModule.cpp  GraphicsModule.h  InputModule.cpp  InputModule.h  ModuleManager.cpp  ModuleManager.h  PhysicsModule.cpp  TextModule.cpp  TextModule.h  UIModule.cpp  UIModule.h
Libraries/UntitledEngine/Source/Platform/: EnginePlatform.h  NetworkPlatform.h  RendererPlatform.h  win32Engine.cpp  win32Network.cpp  win32OpenGLRenderer.cpp
Libraries/UntitledEngine/Source/Resources/: ResourceBase.h
Libraries/UntitledEngine/Source/State/: BaseState.cpp  BaseState.h  StateMachine.cpp  StateMachine.h  StateRegistry.cpp  StateRegistry.h
Libraries/UntitledEngine/Source/States/Editor/: CursorState.cpp  CursorState.h  EditorState.cpp  EditorState.h
Libraries/UntitledEngine/Source/States/Game/: ClientGameState.cpp  ClientGameState.h  GameState.cpp  GameState.h  ServerGameState.cpp  ServerGameState.h
Libraries/UntitledEngine/Source/Utils/: FilePath.h
(+179 files in other folders)
