cmake_minimum_required(VERSION 3.20)

project(UntitledSolution)

set( CMAKE_CONFIGURATION_TYPES 
    OpenGLEditorDebug 
    OpenGLGameDebug 
    OpenGLEditorRelease 
    OpenGLGameRelease 
)

set( CMAKE_CXX_FLAGS_OPENGLEDITORDEBUG "${CMAKE_CXX_FLAGS_DEBUG} -DUSE_EDITOR -D_DEBUG" CACHE STRING "" FORCE )
set( CMAKE_C_FLAGS_OPENGLEDITORDEBUG "${CMAKE_C_FLAGS_DEBUG} -DUSE_EDITOR -D_DEBUG" CACHE STRING "" FORCE )
set( CMAKE_EXE_LINKER_FLAGS_OPENGLEDITORDEBUG "${CMAKE_EXE_LINKER_FLAGS_DEBUG}" CACHE STRING "" FORCE )
set( CMAKE_SHARED_LINKER_FLAGS_OPENGLEDITORDEBUG "${CMAKE_SHARED_LINKER_FLAGS_DEBUG}" CACHE STRING "" FORCE )

set( CMAKE_CXX_FLAGS_OPENGLGAMEDEBUG "${CMAKE_CXX_FLAGS_DEBUG} -D_DEBUG" CACHE STRING "" FORCE )
set( CMAKE_C_FLAGS_OPENGLGAMEDEBUG "${CMAKE_C_FLAGS_DEBUG} -D_DEBUG" CACHE STRING "" FORCE )
set( CMAKE_EXE_LINKER_FLAGS_OPENGLGAMEDEBUG "${CMAKE_EXE_LINKER_FLAGS_DEBUG}" CACHE STRING "" FORCE )
set( CMAKE_SHARED_LINKER_FLAGS_OPENGLGAMEDEBUG "${CMAKE_SHARED_LINKER_FLAGS_DEBUG}" CACHE STRING "" FORCE )

set( CMAKE_CXX_FLAGS_OPENGLEDITORRELEASE "${CMAKE_CXX_FLAGS_RELEASE} -DUSE_EDITOR /Zi" CACHE STRING "" FORCE )
set( CMAKE_C_FLAGS_OPENGLEDITORRELEASE "${CMAKE_C_FLAGS_RELEASE} -DUSE_EDITOR" CACHE STRING "" FORCE )
set( CMAKE_EXE_LINKER_FLAGS_OPENGLEDITORRELEASE "${CMAKE_EXE_LINKER_FLAGS_RELEASE} /DEBUG" CACHE STRING "" FORCE )
set( CMAKE_SHARED_LINKER_FLAGS_OPENGLEDITORRELEASE "${CMAKE_SHARED_LINKER_FLAGS_RELEASE} /DEBUG" CACHE STRING "" FORCE )

set( CMAKE_CXX_FLAGS_OPENGLGAMERELEASE "${CMAKE_CXX_FLAGS_RELEASE}" CACHE STRING "" FORCE )
set( CMAKE_C_FLAGS_OPENGLGAMERELEASE "${CMAKE_C_FLAGS_RELEASE}" CACHE STRING "" FORCE )
set( CMAKE_EXE_LINKER_FLAGS_OPENGLGAMERELEASE "${CMAKE_EXE_LINKER_FLAGS_RELEASE}" CACHE STRING "" FORCE )
set( CMAKE_SHARED_LINKER_FLAGS_OPENGLGAMERELEASE "${CMAKE_SHARED_LINKER_FLAGS_RELEASE}" CACHE STRING "" FORCE )

set( CMAKE_CXX_FLAGS_DEBUGEDITOR "${CMAKE_CXX_FLAGS_DEBUGEDITOR} /ZI /MtD" )
set( CMAKE_CXX_FLAGS_DEBUGGAME "${CMAKE_CXX_FLAGS_DEBUGGAME} /ZI /MtD" )

set( CMAKE_MSVC_RUNTIME_LIBRARY "MultiThreaded$<$<CONFIG:OpenGLEditorDebug,OpenGLGameDebug>:Debug>" )

set_property(GLOBAL PROPERTY USE_FOLDERS ON)
set_property(GLOBAL PROPERTY PREDEFINED_TARGETS_FOLDER "CMake_Folder")


set( CMAKE_CXX_STANDARD 20 )
add_definitions(-DUNICODE -D_UNICODE)

add_subdirectory( Libraries/UntitledEngine )

file( GLOB_RECURSE GameSourceFiles CONGIGURE_DEPENDS
UntitledGame/Source/*.cpp
UntitledGame/Source/*.h
)


source_group( TREE ${CMAKE_CURRENT_SOURCE_DIR} FILES ${GameSourceFiles} )

add_executable( UntitledGame WIN32 ${GameSourceFiles} )

set_property( TARGET UntitledGame PROPERTY INTERPROCEDURAL_OPTIMIZATION_OPENGLEDITORRELEASE TRUE )
set_property( TARGET UntitledGame PROPERTY INTERPROCEDURAL_OPTIMIZATION_OPENGLGAMERELEASE TRUE )

set_property( TARGET UntitledGame PROPERTY VS_DEBUGGER_WORKING_DIRECTORY "${CMAKE_SOURCE_DIR}" )

target_compile_definitions( UntitledGame PRIVATE START_SCENE="$(StartScene)" )

target_include_directories( UntitledGame PRIVATE
    UntitledGame/Source
)

target_link_libraries( UntitledGame PRIVATE
    UntitledEngine
)

set_property( DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} PROPERTY VS_STARTUP_PROJECT UntitledGame )